--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  position: fixed;
+/*   position: fixed; */
   bottom: 0;
   width: 100%;
 }
